# budget_manager

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: budgets.csv  report.csv  run_example.sh  transactions.csv
src/budget_manager/: __init__.py  database.py  io.py  logic.py  main.py
tests/: conftest.py  test_database.py  test_io.py  test_logic.py  test_main.py
